--- a/app/views/guest_orders/new.html.haml
+++ b/app/views/guest_orders/new.html.haml
@@ -1,7 +1,7 @@
 #signup
   .row-fluid
     .span6.offset3
-      %h2.text-center Create an Account
+      %h2.text-center Guest Checkout
       = render 'form'
       
     
