--- a/app/views/layouts/static_layout.html.haml
+++ b/app/views/layouts/static_layout.html.haml
@@ -7,9 +7,9 @@
     = javascript_include_tag "https://js.stripe.com/v1/",  "application"
     = csrf_meta_tags
   %body
-    = render :partial => "shared/navbar"
+    / = render :partial => "shared/navbar"
     .container
-      = render :partial => "shared/brand_header"
+      / = render :partial => "shared/brand_header"
       = render :partial => "shared/sub_menu", :locals => {:categories =>  @categories}
       = render :partial => "shared/flash_messages", :locals => {:flash => flash}
       = yield
