--- a/app/views/stores/new.html.haml
+++ b/app/views/stores/new.html.haml
@@ -7,6 +7,7 @@
         = f.error_notification
         = f.input :name, :label => "Store Name"
         = f.input :path
+        = f.input :description
         =f.simple_fields_for :users do |u|
           = u.input :full_name
           = u.input :email
