--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -9,35 +9,14 @@
   .tabbable
     %ul.nav.nav-tabs
       %li.active
-        = link_to "Profile", customer_path(@customer)
         = link_to "Profile", user_path(@user)
       %li
-        = link_to "Past Orders", orders_path
+        / = link_to "Past Orders", order_path(@user)
 .row-fluid
   %ul.profile
     %li
       .span8
         %p.span3.header Full Name
-        %p.span5= @customer.full_name
-    %li
-      .span8
-        %p.span3.header Email
-        %p.span5= @customer.email
-    %li
-      .span8
-        %p.span3.header Display Name
-        %p.span5= @customer.display_name
-    / %li
-    /   .span8
-    /     %p.span3.header Phone
-    /     %p.span5= @customer.try(:phone)
-    / %li
-    /   .span8
-    /     %p.span3.header Receive SMS Alerts
-    /     %p.span5= @customer.try(:receive_sms?)
-    %li
-      .span8
-        = link_to "Update Profile", edit_customer_path(@customer)
         %p.span5= @user.full_name
     %li
       .span8
@@ -50,11 +29,14 @@
     / %li
     /   .span8
     /     %p.span3.header Phone
-    /     %p.span5= @user.try(:phone)
+    /     %p.span5= @customer.try(:phone)
     / %li
     /   .span8
     /     %p.span3.header Receive SMS Alerts
-    /     %p.span5= @user.try(:receive_sms?)
+    /     %p.span5= @customer.try(:receive_sms?)
     %li
       .span8
-        = link_to "Update Profile", edit_user_path(@user)
+        = link_to "Update Profile", edit_user_path(@user) 
+    %li
+      .span8
+        = link_to "Create a Store", new_store_path
