--- a/app/views/shared/_admin_menu.html.haml
+++ b/app/views/shared/_admin_menu.html.haml
@@ -10,4 +10,5 @@
         = admin_header_link 'Manage Orders', admin_orders_path
         = admin_header_link 'Manage Products', admin_products_path
         = admin_header_link 'Manage Categories', admin_categories_path
+        = admin_header_link 'Edit Store Details', admin_edit_path
         = admin_header_link 'Admin Profile', "#"
