--- a/app/views/orders/_form.html.haml
+++ b/app/views/orders/_form.html.haml
@@ -9,7 +9,6 @@
       %ul
         - @order.errors.full_messages.each do |msg|
           %li= msg
-  = f.hidden_field :stripe_card_token
   .field
     = label_tag :card_number, "Credit Card Number"
     = text_field_tag :card_number, nil, name: nil
@@ -20,7 +19,7 @@
     = label_tag :card_month, "Card Expiration"
     = select_month nil, {add_month_numbers: true}, {name: nil, id: "card_month"}
     = select_year nil, {start_year: Date.today.year, end_year: Date.today.year+15}, {name: nil, id: "card_year"}
-  #stripe_error
-    %noscript JavaScript is not enabled and is required for this form. First enable it in your web browser settings.
+  / #stripe_error
+  /   %noscript JavaScript is not enabled and is required for this form. First enable it in your web browser settings.
   .actions
     = f.submit
