--- a/app/views/orders/index.html.haml
+++ b/app/views/orders/index.html.haml
@@ -9,15 +9,16 @@
   .tabbable
     %ul.nav.nav-tabs
       %li
-        = link_to "Profile", admin_user_path(current_user)
+        / = link_to "Profile", admin_user_path(current_user)
       %li.active
-        = link_to "Past Orders", orders_path
+        = link_to "Past Orders", profile_orders_path
 .row-fluid
   .span12
     %table.table.table-striped.table-bordered.cart-detail
       %thead
         %tr
-          %th.span4 Order Number
+          %th.span2 Order Number
+          %th.span2 Store
           %th.span3 Date Ordered
           %th.span2 Order Total
           %th.span3 Status
@@ -25,7 +26,9 @@
         - @orders.each do |order|
           %tr
             %td
-              = link_to order.id, order_path(order)
+              = link_to order.id, order_path(order.store, order)
+            %td
+              = order.store.name
             %td
               = (order.created_at).to_date.strftime("%B %-d, %Y")
             %td
