--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -11,7 +11,7 @@
       %li.active
         = link_to "Profile", user_path(@user)
       %li
-        / = link_to "Past Orders", order_path(@user)
+        = link_to "Past Orders", profile_orders_path
 .row-fluid
   %ul.profile
     %li
