--- a/app/views/user_mailer/order_confirmation_email.html.haml
+++ b/app/views/user_mailer/order_confirmation_email.html.haml
@@ -5,6 +5,6 @@
   %body
     %h1 Order Confirmation
     %p
-      Order number: #{@user.orders.last.id}
+      Order number: #{@consumer.orders.last.id}
     %p
       Your order has been recieved!
