--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -21,9 +21,9 @@
   = f.text_field :display_name
 
   = f.label "Password"
-  = f.text_field :password
+  = f.password_field :password
 
   = f.label "Password Confirmation"
-  = f.text_field :password_confirmation
+  = f.password_field :password_confirmation
   %br
   = f.submit "Register", :class => "btn-primary"
