--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,7 +8,7 @@
     = csrf_meta_tags
     = tag :meta, :name => "stripe-key", :content => STRIPE_PUBLIC_KEY
   %body
-    = render :partial => "shared/navbar", :except => {}
+    = render :partial => "shared/navbar"
     .container
       = render :partial => "shared/brand_header"
       = render :partial => "shared/sub_menu", :locals => {:categories =>  @categories}
