--- a/app/views/layouts/session.html.haml
+++ b/app/views/layouts/session.html.haml
@@ -5,4 +5,6 @@
     = stylesheet_link_tag    "application", :media => "all"
     = javascript_include_tag "https://js.stripe.com/v1/",  "application"
     = csrf_meta_tags
+    = render :partial => "shared/flash_messages", :locals => {:flash => flash}
+
     = yield
