--- a/app/views/store_admin/products/index.html.haml
+++ b/app/views/store_admin/products/index.html.haml
@@ -4,7 +4,7 @@
     .span6
       %h3 Products
     .span6.header-button
-      = button_to "Add New Product", new_admin_product_path, method: :get, :class => "btn pull-right"
+      = button_to "Add New Product", new_store_admin_product_path(current_store), method: :get, :class => "btn pull-right"
 .row-fluid
   .span12
     %table.table.table-striped.table-bordered.cart-detail
@@ -22,4 +22,4 @@
             %td= product.title
             %td= product.description
             %td= number_to_currency(product.price_in_dollars)
-            %td= link_to "edit", edit_admin_product_path(product.store, product)
+            %td= link_to "edit", edit_store_admin_product_path(current_store, product)
