--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -300,3 +300,130 @@ ul.profile {
     }
   }
 }
+
+/****************************
+Work w/ Jess on this
+****************************/
+
+body {
+        overflow-x: hidden;
+        background: #f1f1f1;
+}
+.navbar-inner {
+  height: 100%;
+  background: #05222a !important;
+  box-shadow: 0px 0px 4px #222 !important;
+  min-height: 75px;
+  border: none !important;
+}
+.navbar .container {
+  line-height: 60px;
+}
+.navbar .nav>li>a {
+  padding: 15px 15px 10px;
+}
+.nav {
+  float:right !important;
+}
+.nav li {
+  line-height: 55px;
+}
+.nav li.active {
+  background: none;
+}
+.nav li a {
+  font-family: 'Questrial', sans-serif;
+  text-transform: uppercase;
+  font-size:1.1em;
+  background: none !important;
+  box-shadow: none !important;
+  color: #fff !important;
+  text-shadow: none !important;
+}
+.nav li a:hover {
+  color: #28b8df !important;
+}
+.brand {
+  font-family: 'Damion', cursive;
+  color: #fff !important;
+  text-shadow: none !important;
+  font-size: 2.6em !important;
+  -webkit-transition: all 1s ease-in-out;
+  -moz-transition: all 1s ease-in-out;
+  -o-transition: all 1s ease-in-out;
+  transition: all 1s ease-in-out;
+}
+.brand:hover {
+  color: #28b8df !important;
+}
+.hero-unit {
+  margin-top: 1em;
+  padding: 0;
+  background: url('http://i.imgur.com/MLW6zRz.jpg');
+  height: 550px;
+  border-radius: 0px !important;
+}
+.hero-unit .primary-message {
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  padding-top: 17em;
+  color: #fff;
+  text-shadow: 0px 0px 10px #000;
+}
+.primary-message h2 {
+  font-family: 'Questrial', sans-serif;
+  text-transform: uppercase;
+  font-size: 3em;
+}
+.primary-message h3 {
+ font-family: 'Damion', cursive;
+ font-size: 3em;
+ padding-top: .5em;
+}
+.primary-button {
+  width: 370px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  background: #ede483;
+  padding: 1em 1em 1em 2em;
+  border-radius: 35px;
+  margin-top: 4.5em;
+  color: #09313c;
+  text-transform: uppercase;
+  font-family: 'Questrial', sans-serif;
+  -webkit-transition: all 1s ease-in-out;
+  -moz-transition: all 1s ease-in-out;
+  -o-transition: all 1s ease-in-out;
+  transition: all 1s ease-in-out;
+}
+.primary-button:hover {
+  text-decoration: none;
+  background: #28b8df;
+}
+.notification {
+  font-family: 'Questrial', sans-serif;
+  text-transform: uppercase;
+  position:absolute;
+  top:115px;
+  right:-270px;
+  width:200px;
+  background:#266236;
+  padding:1.5em 1em 1.5em 2em;
+  color: #fff;
+  border-top-left-radius: 35px;
+  border-bottom-left-radius: 35px;
+  -webkit-transition: all 1s ease-in-out;
+  -moz-transition: all 1s ease-in-out;
+  -o-transition: all 1s ease-in-out;
+  transition: all 1s ease-in-out;
+}
+.notification span {
+  padding-left:.5em;
+  font-size: 1.1em;
+}
+.notification-move {
+  right:0px;
+}
