--- a/app/views/layouts/static_layout.html.haml
+++ b/app/views/layouts/static_layout.html.haml
@@ -3,15 +3,16 @@
   %head
     %title= full_title(yield(:title))
     %meta{:content => "width=device-width, initial-scale=1.0", :name => "viewport"}/
-    = stylesheet_link_tag    "application", :media => "all"
-    = javascript_include_tag "https://js.stripe.com/v1/",  "application"
+    = stylesheet_link_tag    "application", "http://fonts.googleapis.com/css?family=Questrial|Damion"
     = csrf_meta_tags
     = tag :meta, :name => "stripe-key", :content => STRIPE_PUBLIC_KEY
   %body
     = render :partial => "shared/static_navbar"
+    = render :partial => "shared/hero_unit"
     .container
       / = render :partial => "shared/brand_header"
       = render :partial => "shared/sub_menu", :locals => {:categories =>  @categories}
       = render :partial => "shared/flash_messages", :locals => {:flash => flash}
       = yield
       = render :partial => "shared/footer"
+    = javascript_include_tag "https://js.stripe.com/v1/",  "application"
