--- a/app/views/shared/_static_navbar.html.haml
+++ b/app/views/shared/_static_navbar.html.haml
@@ -3,7 +3,7 @@
     .navbar
       .navbar-inner
         .container
-          %a.brand{:href => "#"} Shopmazing
+          %a.brand{:href => "/"} Shopmazing
           %ul.nav
             - if current_user
               %li
