--- a/app/views/shared/_hero_unit.html.haml
+++ b/app/views/shared/_hero_unit.html.haml
@@ -3,5 +3,5 @@
     .primary-message
       %h2 Sell Your Products Online
       %h3 without the hassle.
-    %a.primary-button.between-sections{:href => "#"}
+    %a.primary-button.between-sections{:href => create_new_store_path}
       Create Your Free Shopmazing Store
