--- a/app/views/shared/_flash_messages.html.haml
+++ b/app/views/shared/_flash_messages.html.haml
@@ -1,5 +1,12 @@
-.row-fluid
+- if flash
   - flash.each do |name, msg|
-    %div{:class => "alert alert-#{name == :notice ? "success" : "error"}"}
-      %a.close{"data-dismiss" => "alert"} x
+    %div{:class => "notification notification-#{name == :notice ? "success" : "error"}"}
       = msg
+
+  :javascript
+    $(document).ready(function(){
+      $('.notification').toggleClass('notification-move');
+      setTimeout(function() {
+        $(".notification").delay(3500).toggleClass('notification-move');
+      }, 4000);
+    })
