store admin section locked down

--- a/app/views/categories/index.html.haml
+++ b/app/views/categories/index.html.haml
@@ -1,5 +1,5 @@
-%h1 Categories
-%h1
+%h3 #{current_store.name} - Categories
+
+%ul
   - @categories.each do |c|
-    %div
-    = link_to c.name, category_path(c)
+    %li= link_to c.name, categories_path(current_store, c)
