--- a/app/views/store_admin/categories/_form.html.haml
+++ b/app/views/store_admin/categories/_form.html.haml
@@ -1,4 +1,4 @@
-= simple_form_for [:admin, @category]  do |f|
+= simple_form_for [:store_admin, @category]  do |f|
   = f.error_notification
   = f.input :name, input_html: {class: "span6"}
   .form-actions
