--- a/app/views/store_admin/categories/edit.html.haml
+++ b/app/views/store_admin/categories/edit.html.haml
@@ -1,6 +1,30 @@
 - provide(:title, 'Admin Edit Category')
+.row-fluid 
+  .span12
+    .page-header
+      %h1 Administration Portal
+
+.row-fluid
+  .tabbable
+    %ul.nav.nav-tabs
+      %li
+        = link_to "Dashboard", store_admin_path
+      %li
+        = link_to "Past Orders", store_admin_orders_path
+      %li
+        = link_to "Manage Products", store_admin_products_path
+      %li.active
+        = link_to "Manage Categories", store_admin_categories_path
+
 .row-fluid
   .span12
     .span6
       %h3 Edit Existing Category
-= render 'form'
+-# = render 'form'
+= simple_form_for [:store_admin, @category], :url => store_admin_category_path(current_store, @category)  do |f|
+  = f.error_notification
+  = f.input :name, input_html: {class: "span6"}
+  .form-actions
+    = f.button :submit, :class => 'btn-primary'
+    = submit_tag 'Cancel', :type => :reset, :class => "btn btn-danger"
+  = f.error :base
