--- a/app/views/store_admin/products/edit.html.haml
+++ b/app/views/store_admin/products/edit.html.haml
@@ -1,6 +1,23 @@
 - provide(:title, 'Admin Edit Product')
 .row-fluid
   .span12
+    .page-header
+      %h1 Administration Portal
+
+.row-fluid
+  .tabbable
+    %ul.nav.nav-tabs
+      %li
+        = link_to "Dashboard", store_admin_path
+      %li
+        = link_to "Past Orders", store_admin_orders_path
+      %li.active
+        = link_to "Manage Products", store_admin_products_path
+      %li
+        = link_to "Manage Categories", store_admin_categories_path
+
+.row-fluid
+  .span12
     .span6
       %h3 Edit Existing Product
 -# = render 'form'
