--- a/app/views/orders/index.html.haml
+++ b/app/views/orders/index.html.haml
@@ -9,9 +9,11 @@
   .tabbable
     %ul.nav.nav-tabs
       %li
-        / = link_to "Profile", admin_user_path(current_user)
+        = link_to "Profile", profile_path
       %li.active
-        = link_to "Past Orders", profile_orders_path
+        = link_to "Past Purchases", profile_orders_path
+      %li
+        = link_to "Your Stores", "#"
 .row-fluid
   .span12
     %table.table.table-striped.table-bordered.cart-detail
