--- a/app/views/shared/_navbar.html.haml
+++ b/app/views/shared/_navbar.html.haml
@@ -7,8 +7,8 @@
         %span.icon-bar
       .nav-collapse
         %ul.nav.pull-right
-          %li= link_to "My Cart", cart_path(current_store, current_cart)
-          - if current_user  
+          = render :partial => "shared/cart_navbar"
+          - if current_user
             %li
               %p Welcome #{current_user.full_name}
             %li= link_to "My Account", profile_path
