--- a/app/views/store_admin/dashboards/show.html.haml
+++ b/app/views/store_admin/dashboards/show.html.haml
@@ -1,6 +1,24 @@
 - provide(:title, 'Admin Dashboard')
 .row-fluid
   .span12
+    .page-header
+      %h1 #{current_store.name} - Administration Portal
+
+.row-fluid
+  .tabbable
+    %ul.nav.nav-tabs
+      %li.active
+        = link_to "Dashboard", store_admin_path
+      %li
+        = link_to "Past Orders", store_admin_orders_path
+      %li
+        = link_to "Manage Products", store_admin_products_path
+      %li
+        = link_to "Manage Categories", store_admin_categories_path
+
+
+.row-fluid
+  .span12
     %h4 Total Orders by Status
 .row-fluid
   .status-panel.pull-left.span12
@@ -64,16 +82,16 @@
         - @orders.each do |order|
           %tr
             %td
-              = link_to order.id, admin_order_path(order.store, order)
+              = link_to order.id, store_admin_order_path(order.store, order)
             %td= (order.created_at).to_date.strftime("%B %-d, %Y")
             %td= number_to_currency(order.total_price)
             %td= order.current_status
             %td
               - if order.current_status == "pending"
-                = link_to "Cancel", admin_order_path(order.store, order), :method => :put
+                = link_to "Cancel", store_admin_order_path(order.store, order), :method => :put
               - elsif order.current_status == "shipped"
-                = link_to "Mark as returned", admin_order_path(order.store, order), :method => :put
+                = link_to "Mark as returned", store_admin_order_path(order.store, order), :method => :put
               - elsif order.current_status == "paid"
-                = link_to "Mark as shipped", admin_order_path(order.store, order), :method => :put
+                = link_to "Mark as shipped", store_admin_order_path(order.store, order), :method => :put
               - else
                 = "N/A"
