--- a/app/views/store_admin/orders/index.html.haml
+++ b/app/views/store_admin/orders/index.html.haml
@@ -1,6 +1,22 @@
 - provide(:title, 'Admin Order List')
 .row-fluid
   .span12
+    .page-header
+      %h1 Administration Portal
+
+.row-fluid
+  .tabbable
+    %ul.nav.nav-tabs
+      %li
+        = link_to "Dashboard", store_admin_path
+      %li.active
+        = link_to "Past Orders", store_admin_orders_path
+      %li
+        = link_to "Manage Products", store_admin_products_path
+      %li
+        = link_to "Manage Categories", store_admin_categories_path
+.row-fluid
+  .span12
     .span6
       %h3 Orders
     .span6.header-button
@@ -17,7 +33,7 @@
         - @orders.each do |order|
           %tr
             %td
-              = link_to order.id, admin_order_path(order.store, order)
+              = link_to order.id, store_admin_order_path(order.store, order)
             %td= (order.created_at).to_date.strftime("%B %-d, %Y")
             %td= number_to_currency(order.total_price)
             %td= order.current_status
