--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -12,6 +12,8 @@
         = link_to "Profile", profile_path
       %li
         = link_to "Past Orders", profile_orders_path
+      %li
+        = link_to "Your Stores", "#"
 .row-fluid
   %ul.profile
     %li
