added seed data w faker gem, added pagination, changed product views for the better

--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -16,8 +16,8 @@
         %li.span3
           .thumbnail
             = link_to product_path(product.store, product) do
-              = image_tag product.photo.url
+              = image_tag product.photo_url.to_s
             .caption
-              %h5= link_to product.title, product_path(product.store, product)
+              %h5= link_to product.title.truncate(10), product_path(product.store, product)
               %p= number_to_currency(product.price_in_dollars)
-  / = paginate @products
+  = paginate @products
