--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,5 +1,4 @@
-#signup
-  .row-fluid
-    .span6.offset3
-      %h2.text-center Create an Account
-      = render 'form'
+.row
+  .single-form.span4
+    %a.brand.brand-dark{:href => "/"} Shopmazing
+    = render 'form'
