--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -130,9 +130,8 @@ body {
 }
 
 .breadcrumb {
-  background-image: -webkit-linear-gradient(top, #ffffff, #f5f5f5);
-  border: 1px solid #ddd;
-  box-shadow: inset 0 1px 0 #ffffff;
+  background: #f9f9f9;
+  box-shadow: 0px 0px 5px #d4d4d4;
   margin-top: 10px;
 }
 
@@ -305,6 +304,10 @@ ul.profile {
 Work w/ Jess on this
 ****************************/
 
+h1, h2, h3, h4, h5, strong {
+  font-family: 'Questrial', sans-serif;
+}
+
 body {
   overflow-x: hidden;
   background: #f1f1f1;
@@ -381,6 +384,9 @@ body {
   color: #fff;
   text-shadow: 0px 0px 10px #000;
 }
+#content {
+  margin-top: 3em;
+}
 .primary-message h2 {
   font-family: 'Questrial', sans-serif;
   text-transform: uppercase;
@@ -392,7 +398,7 @@ body {
  padding-top: .5em;
 }
 .primary-button {
-  width: 370px;
+  width: 470px;
   margin-left: auto;
   margin-right: auto;
   display: block;
@@ -511,4 +517,14 @@ body {
 }
 .inset {
   text-align: center;
+}
+.product-container {
+  padding: 2em;
+  background: white;
+  float: left;
+  border-radius: 3px;
+  box-shadow: 0px 0px 5px #d4d4d4;
+}
+.footer {
+  margin-top: 3em;
 }
