--- a/app/views/layouts/signup.html.haml
+++ b/app/views/layouts/signup.html.haml
@@ -7,4 +7,5 @@
     = javascript_include_tag "https://js.stripe.com/v1/",  "application"
     = csrf_meta_tags
   %body
+    = render :partial => "shared/flash_messages", :locals => {:flash => flash}
     = yield
