--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -1,5 +1,5 @@
-= form_for @user, :html => { :class => 'bs-container' } do |f|
-
+= form_for @user do |f|
+  %h4= "Create An Account"
   - if @user.errors.any?
     #error_explanation
       %h2
@@ -11,19 +11,9 @@
           - if @user.errors.messages[:email]
             = link_to 'Sign In?', new_session_path
 
-  = f.label "Full Name"
-  = f.text_field :full_name
-
-  = f.label "Email"
-  = f.text_field :email
-
-  = f.label "Username (optional)"
-  = f.text_field :display_name
-
-  = f.label "Password"
-  = f.password_field :password
-
-  = f.label "Password Confirmation"
-  = f.password_field :password_confirmation
-  %br
-  = f.submit "Register", :class => "btn-primary"
+  = f.text_field :full_name, placeholder: "Full Name"
+  = f.text_field :email, placeholder: "Email"
+  = f.text_field :display_name, placeholder: "Display name (optional)"
+  = f.password_field :password, placeholder: "Password"
+  = f.password_field :password_confirmation, placeholder: "Confirm password"
+  = f.submit "Register", :class => "form-primary-button"
