fixed the increment on cart view, order update, admin order update, put the cart contents on the checkout page

--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -67,4 +67,4 @@
   /               = button_to "Empty Cart", cart_path(@cart), :method => :delete, data: { confirm: "Are you sure?" }, :class => "btn pull-left"
   /           .span5.pull-right
   /             = button_to "Checkout", {:controller => "orders", :action => "new"}, :method => :get, :class => "btn btn-inverse pull-right"
-%p= link_to "Back to all products", products_path
+%p= link_to "Back to all products", products_path, :class => "btn"
