--- a/app/views/carts/show.html.haml
+++ b/app/views/carts/show.html.haml
@@ -36,9 +36,9 @@
               %td
                 %form.form-inline
                   %span.uneditable-input.input-small{:type => "text"}= line_item.quantity
-                  = link_to add_quantity_to_cart_path(line_item.product_id), :method => :put, :class => "btn btn-small", :id => "+" do
+                  = link_to increase_quantity_cart_path(current_store, line_item.product_id), :method => :put, :class => "btn btn-small", :id => "+" do
                     %i.icon-plus
-                  = link_to decrease_quantity_from_cart_path(line_item.product_id), :method => :put, :class => "btn btn-small", :id => "-" do
+                  = link_to decrease_quantity_cart_path(current_store, line_item.product_id), :method => :put, :class => "btn btn-small", :id => "-" do
                     %i.icon-minus
               %td
                 = number_to_currency(line_item.product.price_in_dollars)
