--- a/app/views/store_admin/dashboards/show.html.haml
+++ b/app/views/store_admin/dashboards/show.html.haml
@@ -64,16 +64,16 @@
         - @orders.each do |order|
           %tr
             %td
-              = link_to order.id, admin_order_path(order.store, order)
+              = link_to order.id, store_admin_order_path(order.store, order)
             %td= (order.created_at).to_date.strftime("%B %-d, %Y")
             %td= number_to_currency(order.total_price)
             %td= order.current_status
             %td
               - if order.current_status == "pending"
-                = link_to "Cancel", admin_order_path(order.store, order), :method => :put
+                = link_to "Cancel", store_admin_order_path(order.store, order), :method => :put
               - elsif order.current_status == "shipped"
-                = link_to "Mark as returned", admin_order_path(order.store, order), :method => :put
+                = link_to "Mark as returned", store_admin_order_path(order.store, order), :method => :put
               - elsif order.current_status == "paid"
-                = link_to "Mark as shipped", admin_order_path(order.store, order), :method => :put
+                = link_to "Mark as shipped", store_admin_order_path(order.store, order), :method => :put
               - else
                 = "N/A"
