--- a/app/views/store_admin/orders/index.html.haml
+++ b/app/views/store_admin/orders/index.html.haml
@@ -17,7 +17,7 @@
         - @orders.each do |order|
           %tr
             %td
-              = link_to order.id, admin_order_path(order.store, order)
+              = link_to order.id, store_admin_order_path(order.store, order)
             %td= (order.created_at).to_date.strftime("%B %-d, %Y")
             %td= number_to_currency(order.total_price)
             %td= order.current_status
