--- a/app/views/store_admin/orders/show.html.haml
+++ b/app/views/store_admin/orders/show.html.haml
@@ -14,17 +14,17 @@
           %span
             = (@order.created_at).to_time.strftime("%I:%M %P")
             , GMT
-          = link_to "view all past orders", admin_orders_path
+          = link_to "view all past orders", store_admin_orders_path
       .details
         %p.customer
-          Customer:
+          Customer Email:
           %span.cust_name
-            = @order.user.full_name
+            = @order.consumer.email
       .details
         %p.customer
-          Email:
+          Customer ID
           %span.cust_email
-            = @order.user.email
+            = @order.consumer.id
       .status
         %p.state
           = @order.current_status
@@ -56,10 +56,10 @@
               %form.form-inline
                 %span.uneditable-input.input-small{:type => "text"}= line_item.quantity
                 - if @order.current_status == "pending" || @order.current_status == "paid"
-                  = link_to admin_add_quantity_to_order_path(line_item), :method => :put, :class => "btn btn-small", :id => "+" do
+                  = link_to increase_quantity_admin_line_item_path(line_item), :method => :put, :class => "btn btn-small", :id => "+" do
                     %i.icon-plus
-                  = link_to admin_decrease_quantity_from_order_path(line_item), :method => :put, :class => "btn btn-small", :id => "-" do
-                    %i.icon-minus
+                  = link_to decrease_quantity_admin_line_item_path(line_item), :method => :put, :class => "btn btn-small", :id => "-" do
+                    %i.icon-minus 
             %td
               = number_to_currency(line_item.product.price_in_dollars)
             %td
@@ -83,8 +83,8 @@
             Change Order Status To:
         %span
           - if @order.current_status == "pending"
-            = link_to "Cancel", admin_order_path(@order.store, @order), :method => :put, :class => "btn btn-inverse"
+            = link_to "Cancel", store_admin_order_path(@order.store, @order), :method => :put, :class => "btn btn-inverse"
           - elsif @order.current_status == "shipped"
-            = link_to "Mark as returned", admin_order_path(@order.store, @order), :method => :put, :class => "btn btn-inverse"
+            = link_to "Mark as returned", store_admin_order_path(@order.store, @order), :method => :put, :class => "btn btn-inverse"
           - elsif @order.current_status == "paid"
-            = link_to "Mark as shipped", admin_order_path(@order.store, @order), :method => :put, :class => "btn btn-inverse"
+            = link_to "Mark as shipped", store_admin_order_path(@order.store, @order), :method => :put, :class => "btn btn-inverse"
