--- a/app/views/shared/_navbar.html.haml
+++ b/app/views/shared/_navbar.html.haml
@@ -10,7 +10,7 @@
           %li= link_to "My Cart", cart_path(current_store, current_cart)
           - if current_user  
             %li
-              %p Welcome #{current_user.full_name}
+              / %p Welcome #{current_user.full_name}
             %li= link_to "My Account", profile_path
             %li= link_to "Logout", logout_path
           - else
