removed redundant stylesheets and started caching

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,9 +15,9 @@
       = render :partial => "shared/flash_messages", :locals => {:flash => flash}
       = yield
       = render :partial => "shared/footer"
-      %br
-      = "CURRENT USER:#{current_user.inspect}" if Rails.env.development?
-      %br
-      = "CURRENT CART: #{current_cart.inspect}" if Rails.env.development?
-      %br
-      = "CURRENT STORE: #{current_store.inspect}" if Rails.env.development?
+      / %br
+      / = "CURRENT USER:#{current_user.inspect}" if Rails.env.development?
+      / %br
+      / = "CURRENT CART: #{current_cart.inspect}" if Rails.env.development?
+      / %br
+      / = "CURRENT STORE: #{current_store.inspect}" if Rails.env.development?
