--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -1,45 +1,46 @@
-%hr/
-.row-fluid.footer
-  .span4
-    %tr
-      %td
-      %td
-      %td
-      %td
-      %td
-    %h3 Information
-    %ul
-      %li
-        %a{:href => "#"} Contact
-      %li
-        %a{:href => "#"} Delivery
-      %li
-        %a{:href => "#"} FAQ
-      %li
-        %a{:href => "#"} Terms and condition
-  .span4
-    %h3 Stay in Touch
-    %ul
-      %li
-        %a{:href => "#"} Facebook
-      %li
-        %a{:href => "#"} Twitter
-      %li
-        .control-group
-          .controls
-            .input-prepend.input-append
-              .span.add-on
-                %i.icon-envelope
-              %input.span6.appendedPrependedInput{:placeholder => "Enter your email", :type => "text"}/
-              %input.btn{:name => "submit", :type => "submit", :value => "Subcribe"}/
-  .span4
-    %h3 Other stuff
-    %ul
-      %li
-        %a{:href => "#"} Link
-      %li
-        %a{:href => "#"} Link
-      %li
-        %a{:href => "#"} Link
-      %li
-        %a{:href => "#"} Link
+- cache("footer") do
+  %hr/
+  .row-fluid.footer
+    .span4
+      %tr
+        %td
+        %td
+        %td
+        %td
+        %td
+      %h3 Information
+      %ul
+        %li
+          %a{:href => "#"} Contact
+        %li
+          %a{:href => "#"} Delivery
+        %li
+          %a{:href => "#"} FAQ
+        %li
+          %a{:href => "#"} Terms and condition
+    .span4
+      %h3 Stay in Touch
+      %ul
+        %li
+          %a{:href => "#"} Facebook
+        %li
+          %a{:href => "#"} Twitter
+        %li
+          .control-group
+            .controls
+              .input-prepend.input-append
+                .span.add-on
+                  %i.icon-envelope
+                %input.span6.appendedPrependedInput{:placeholder => "Enter your email", :type => "text"}/
+                %input.btn{:name => "submit", :type => "submit", :value => "Subcribe"}/
+    .span4
+      %h3 Other stuff
+      %ul
+        %li
+          %a{:href => "#"} Link
+        %li
+          %a{:href => "#"} Link
+        %li
+          %a{:href => "#"} Link
+        %li
+          %a{:href => "#"} Link
