--- a/app/views/shared/_brand_header.html.haml
+++ b/app/views/shared/_brand_header.html.haml
@@ -1,9 +1,10 @@
-.row-fluid
-  .logo-banner.pull-left.span12
-    .span6.logo
-      %h1
-        %a{:href => "/"}
-          = image_tag("http://store-engine.s3.amazonaws.com/assets/Cloak_and_DaggerSmall.png")
-    .span6
-      .cart_link.pull-right
-        %span
+- cache("logo") do
+  .row-fluid
+    .logo-banner.pull-left.span12
+      .span6.logo
+        %h1
+          %a{:href => "/"}
+            = image_tag("http://store-engine.s3.amazonaws.com/assets/Cloak_and_DaggerSmall.png")
+      .span6
+        .cart_link.pull-right
+          %span
