--- a/app/views/orders/checkout_funnel.html.haml
+++ b/app/views/orders/checkout_funnel.html.haml
@@ -1,15 +1,23 @@
-%h3 How would you like to Checkout?
-#login
-  .span6.offset3
-    %h4 Sign-Up
-    = link_to "Not registered? Sign up here", new_user_path
-    %h4 Login
-    = simple_form_for :sessions, :url => sessions_path, :html => {:class => 'bs-container'} do |f|
-      = f.error_notification
-      = f.input :email
-      = f.input :password
-      = f.button :submit, :value => "Log In", :class => "btn btn-primary"
-      = f.error :base
-#login
-  .span6.offset3
-    = link_to "Checkout as Guest", checkout_path(current_store, {:guest => true}), method: :get, :class => "btn btn-primary pull-right"
+.row
+  .single-form.span8
+    %a.brand.brand-dark{:href => "/"} Shopmazing
+    = simple_form_for :sessions, :url => sessions_path do |f|
+      .dual-option-form-left
+        %h4= "Returning Visitors"
+        = f.error_notification
+        = f.input :email, label: false, input_html: { placeholder: "Email" }
+        = f.input :password, label: false, input_html: { placeholder: "Password" }
+        = f.button :submit, :value => "Continue Checkout", :class => "form-primary-button"
+        = f.error :base
+
+      .dual-option-form-right
+        %h4= "New Customers"
+        %p.form-light= "2 ways to check out"
+        .number-list
+          .number
+            1
+          = link_to "Create An Account", new_user_path, class: "number-list-link"
+        .number-list
+          .number
+            2
+          = link_to "Checkout As Guest", checkout_path(current_store, {:guest => true}), class: "number-list-link"
