--- a/app/views/orders/new.html.haml
+++ b/app/views/orders/new.html.haml
@@ -1,4 +1,4 @@
-.depot.form
-  %fieldset
-    %legend Please enter your details
+.row
+  .single-form.span4
+    %a.brand.brand-dark{:href => "/"} Shopmazing
     = render 'form'
