--- a/app/views/orders/_form.html.haml
+++ b/app/views/orders/_form.html.haml
@@ -1,45 +1,3 @@
-/ %h3 Order Total:
-/ %h3= number_to_currency current_cart.total_price
-
-/ = simple_form_for @order do |f|
-/   - if @order.errors.any?
-/     #error_explanation
-/       %h2
-/         = pluralize(@order.errors.count, "error")
-/         prohibited this charge from processing:
-/       %ul
-/         - @order.errors.full_messages.each do |msg|
-/           %li= msg
-/   = f.hidden :stripe_card_token
-/   %h4 Personal Details
-/   = f.input :email, placeholder: current_user.email
-/   %h4 Shipping Address
-/   = f.simple_fields_for :shipping_address do |s|
-/     = s.input :street
-/     = s.input :city
-/     = s.input :state
-/     = s.input :zipcode
-/   %h4 Billing Address
-/   = f.simple_fields_for :billing_address do |b|
-/     = b.input :street
-/     = b.input :city
-/     = b.input :state
-/     = b.input :zipcode
-/   %h4 Payment Details
-/   = f.input :card_number
-/   = f.input :card_code
-/   = f.input :card_month, as: :date, start_year: Date.today.year + 10,
-/                               end_year: Date.today.year, discard_day: true,
-/                               order: [:month, :year]
-/   / = f.input :card_year, {start_year: Date.today.year, end_year: Date.today.year+15}
-
-/   = f.button :submit, value: "Order"
-/   = f.error :base        
-
-
-
-
-
 = form_for(@order) do |f|
   - if @order.errors.any?
     #error_explanation
@@ -51,42 +9,29 @@
           %li= msg
 
   = f.hidden_field :stripe_card_token
-  / conditionally wrap the email requirement field
   .field
-    / %h3 Order for: "#{current_user.email || 'New Customer'}"
     -unless current_user
-      = f.label :email, "Email"
-      = f.text_field :email
+      = f.text_field :email, placeholder: "Email"
 
-    %h3 Billing Address
+    %h4 Billing Address
     = f.fields_for :billing_address do |s|
-      = s.label :street, "Street"
-      = s.text_field :street
-      = s.label :city, "City"
-      = s.text_field :city
-      = s.label :state, "State"
-      = s.text_field :state
-      = s.label :zipcode, "Zipcode"
-      = s.text_field :zipcode
+      = s.text_field :street, placeholder: "Street"
+      = s.text_field :city, placeholder: "City"
+      = s.text_field :state, placeholder: "State"
+      = s.text_field :zipcode, placeholder: "Zipcode"
 
-      %h3 Shipping Address
+    %h4 Shipping Address
     = f.fields_for :shipping_address do |s|
-      = s.label :street, "Street"
-      = s.text_field :street
-      = s.label :city, "City"
-      = s.text_field :city
-      = s.label :state, "State"
-      = s.text_field :state
-      = s.label :zipcode, "Zipcode"
-      = s.text_field :zipcode
+      = s.text_field :street, placeholder: "Street"
+      = s.text_field :city, placeholder: "City"
+      = s.text_field :state, placeholder: "State"
+      = s.text_field :zipcode, placeholder: "Zipcode"
 
-  %h3 Payment Details
+  %h4 Payment Details
   .field
-    = label_tag :card_number, "Credit Card Number"
-    = text_field_tag :card_number, nil, name: nil
+    = text_field_tag :card_number, nil, name: nil, placeholder: "Credit card number"
   .field
-    = label_tag :card_code, "Security Code on Card (CVV)"
-    = text_field_tag :card_code, nil, name: nil
+    = text_field_tag :card_code, nil, name: nil, placeholder: "Security code (CVV)"
   .field
     = label_tag :card_month, "Card Expiration"
     = select_month nil, {add_month_numbers: true}, {name: nil, id: "card_month"}
@@ -94,4 +39,4 @@
   #stripe_error
     %noscript JavaScript is not enabled and is required for this form. First enable it in your web browser settings.
   .actions
-    = f.submit
+    = f.submit :order, class: "form-primary-button"
