--- a/app/views/shared/_cart_navbar.html.haml
+++ b/app/views/shared/_cart_navbar.html.haml
@@ -1,1 +1,2 @@
-%li= link_to "My Cart", cart_path(current_store, current_cart)
+- if current_store
+  %li= link_to "My Cart", cart_path(current_store, current_cart)
