--- a/app/views/stores/index.html.haml
+++ b/app/views/stores/index.html.haml
@@ -2,5 +2,5 @@
 %p Check out one of the stores on our platform
 - @stores.each do |store|
   %li
-    = link_to store.name, home_path
+    = link_to store.name, home_path(store)
 
