--- a/app/views/store_admin/orders/index.html.haml
+++ b/app/views/store_admin/orders/index.html.haml
@@ -15,6 +15,8 @@
         = link_to "Manage Products", store_admin_products_path
       %li
         = link_to "Manage Categories", store_admin_categories_path
+      %li
+        = link_to "Manage Admins", "#"
 .row-fluid
   .span12
     .span6
