--- a/app/views/layouts/signup.html.haml
+++ b/app/views/layouts/signup.html.haml
@@ -6,6 +6,7 @@
     = stylesheet_link_tag    "application", "http://fonts.googleapis.com/css?family=Questrial|Damion"
     = javascript_include_tag "https://js.stripe.com/v1/",  "application"
     = csrf_meta_tags
+    = tag :meta, :name => "stripe-key", :content => STRIPE_PUBLIC_KEY
   %body
     = render :partial => "shared/flash_messages", :locals => {:flash => flash}
     = yield
